--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -4,6 +4,12 @@ html, body {
   padding: 0;
 }
 
+body {
+  background-image: url("https://res.cloudinary.com/webhitos/image/upload/v1571855535/c1fscnph9mkigk1inils.svg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
