:ok_hand: Login & update user CSS ok

--- a/src/views/session/new.html.ejs
+++ b/src/views/session/new.html.ejs
@@ -42,15 +42,10 @@
         </form>
         <div class="end-user-login">
             <form action="<%- newUserPath %>">
-                <input id="boton" type="submit" value="Crear Usuario" />
+                <input  class="new-button" type="submit" value="Crear Usuario" />
             </form>
         </div>
       </div>
     </div>
-  </div>
-  <div>
-    <form action="<%- rootPath %>">
-      <input class="boton-material" id="boton-material" type="submit" value="Volver" />
-    </form>
   </div>
 </div>
