--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,11 +1,11 @@
 @import './layout';
 @import './home';
-@import './user_loggin';
-@import './user_list';
-@import './new_user';
 @import './materials_show';
 @import './materials_pattern_create';
 @import './pattern_index';
 @import './pattern_show';
 @import './pattern';
-@import './user-profile'
+@import './user_profile';
+@import './user_list';
+@import './user_new';
+@import './user_loggin';
