--- a/src/assets/styles/materials_show.scss
+++ b/src/assets/styles/materials_show.scss
@@ -1,11 +1,108 @@
 
 
+/* Built */
+
+.material-show-content {
+  margin: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.material-show-tittle{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.materials-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.materials-content-all {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.material-container{
+  width: 500px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 30px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #f7f7f7;
+  padding: 20px;
+  border-radius: 15px;
+
+}
+
+/* Details */
+
+.material-text{
+  width: 400px;
+  word-wrap: break-word;
+}
+
+.add-material {
+  background-color: lightgreen;
+  border-style: none;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-left: 20px;
+  color: white;
+}
+
+.edit-material {
+  background-color: #ffd646;
+  border-style: none;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-left: 20px;
+  color: white;
+}
+
+.delete-material {
+  background-color: #fb6070;
+  border-style: none;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-left: 20px;
+  color: white;
+}
+/* Interaction */
+
+
+@media screen and (max-width: 875px){
+
+  .material-container{
+    width: 400px;
+    margin: 10px 0px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .material-text{
+    width: 300px;
+    word-wrap: break-word;
+  }
+
+}
+
+
+/*
+
 .contenedor-body-show{
   margin-left: 30px;
   margin-right: 30px;
 }
-
-
 
 .material-show-head{
   display: flex;
@@ -88,3 +185,5 @@
   }
 
 }
+
+*/
