--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,7 +1,7 @@
 @import './layout';
 @import './home';
-@import './materials_show';
-@import './materials_pattern_create';
+@import './material_show';
+@import './material_new';
 @import './pattern_index';
 @import './pattern_show';
 @import './pattern';
