:ok_hand: UserList CSS ok

--- a/src/assets/styles/user_profile.scss
+++ b/src/assets/styles/user_profile.scss
@@ -46,6 +46,11 @@
 
 /* Details */
 
+.tittle-name{
+  width: 800px;
+  word-break: break-word;
+}
+
 .profile-data-font {
   text-decoration: none;
   font-family: Arial;
