--- a/src/views/users/show.html.ejs
+++ b/src/views/users/show.html.ejs
@@ -1,6 +1,6 @@
 <div class="profile-content">
   <div class="tittle-profile">
-    <div class="tittle-profile-element">
+    <div class="tittle-name">
       <h1><%- user.username %></h1>
     </div>
     <% if ((currentUser) && (currentUser.id === user.id)) { %>
