--- a/src/views/categories/edit.html.ejs
+++ b/src/views/categories/edit.html.ejs
@@ -1,13 +1,12 @@
 
-<div class="content-body">
-  <div class="content-sub-form">
-    <h1 class="panel-content">Editar Categoría</h1>
+
+<div class="edit-category-content">
+  <div class="edit-tittle-content">
+    <h1 class="category-edit">Editar categoría</h1>
   </div>
-  <div class="content-sub-form">
+  <div class="edit-form-content">
     <%- include('_form') %>
-  </div><br>
-  <form action="<%- categoriesPath %>">
-    <input class="boton-material" id="boton-material" type="submit" value="Volver" />
-  </form>
   </div>
 </div>
+
+
