:ok_hand: Pattern Show CSS

--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -8,3 +8,21 @@ h1 {
   align-self: auto;
 }
 
+h2 {
+  text-decoration: none;
+  font-family: "Dancing Script";
+  font-size: 40px;
+  color:  #26bfbf;
+  font-weight: 700 ;
+  align-self: auto;
+}
+
+h3 {
+  text-decoration: none;
+  font-family: "Dancing Script";
+  font-size: 30px;
+  color:  #26bfbf;
+  font-weight: 700 ;
+  align-self: auto;
+}
+
