--- a/src/views/patterns/index.html.ejs
+++ b/src/views/patterns/index.html.ejs
@@ -1,71 +1,54 @@
 
-<div class="contenedor-body-show">
-  <div class="material-show-head">
-    <div class="material-show-element">
-        <h1>Patrones</h1>
+<div class="pattern-show-content">
+  <div class="pattern-show-tittle">
+    <div>
+      <h1>Patrones</h1>
     </div>
-    <div class="material-show-element">
-      <% if (currentUser) { %>
-        <form action="<%- newPatternPath %>">
-            <input class="material-add-button" type="submit" value="+" />
-        </form>
-      <% } %>
+    <div>
+      <form action="<%- newPatternPath %>">
+        <button class="add-pattern" type="submit"> <i class="fas fa-plus-circle fa-2x"></i> </button>
+      </form>
     </div>
   </div>
-  <div class="pattern-search">
-    <div class="search-content">
-      <h2>Buscar Patrones</h2>
+  <div class="pattern-body">
+    <div class="pattern-search">
+      <div class="search-content">
+        <h2>Buscar Patrones</h2>
+      </div>
+      <div class="search-content">
+        <%- include('search') %>
+      </div>
     </div>
-    <div class="search-content">
-      <%- include('search') %>
-    </div>
-  </div>
-  <div class="patterns-list" id="content-sub-body">
-    <div class="pattern-list-element">
+    <div class="patterns-list">
       <h2>Lista de Patrones</h2>
-    </div>
-    <div class="pattern-list-element">
-      <div class="all-pattern">
+      <div class="pattern-content">
         <% if (!patternsList.length) { %>
-          <p>No hay patrones!</p>
+          <h3>No hay patrones!</h3>
         <% } else { %>
         <% patternsList.forEach((pattern) => { %>
-            <div class="pattern">
-              <div class="pattern-element">
-                <a class="parag-list" href="<%- patternPath(pattern) %>"><%- pattern.name %></a>
-              </div>
-              <div class="pattern-element">
-                <a class="parag-list">Puntaje: <%- pattern.score %>/5</a>
-              </div>
-              <div class="pattern-element">
-                <a class="parag-list">Popularidad: <%- pattern.popularity %></a>
-              </div>
-              <% if (currentUser) { %>
-                <% if ((currentUser.id === pattern.authorId) || (currentUser.role === 'admin')) { %>
-                  <div class="pattern-element">
+          <div class="pattern-search-container">
+            <img class="photo" src="<%- pattern.image %>">
+            <a class="pattern-font-tittle" href="<%- patternPath(pattern) %>"><%- pattern.name %></a>
+            <a class="pattern-font">Puntaje: <%- pattern.score %>/5</a>
+            <a class="pattern-font">Popularidad: <%- pattern.popularity %></a>
+            <% if (currentUser) { %>
+              <% if ((currentUser.id === pattern.authorId) || (currentUser.role === 'admin')) { %>
+                <div class="edit-and-delete-pattern">
                   <form action="<%- editPatternPath(pattern) %>">
-                    <input id="boton" type="submit" value="Editar" />
+                    <button class="edit-pattern" type="submit"> <i class="fas fa-pen"></i> </button>
                   </form>
-                  </div>
-                  <div class="pattern-element">
                   <form action="<%- deletePatternPath(pattern) %>" onclick="return confirm('Estás seguro?');"
                     method="POST">
-                    <input id="boton" type="hidden" name="_method" value="delete" />
-                    <input id="boton" type="submit" value="Eliminar" />
+                    <input type="hidden" name="_method" value="delete" />
+                    <button class="delete-pattern" type="submit"> <i class="fas fa-trash-alt "></i></button>
                   </form>
-                  </div>
-                <% } else { %>
-                <p>Ninguna!</p>
-                <% } %>
-              </div>
-              <% }}) %>
-        <% }; %>
+                </div>
+              <% } %>
+            <% } %>
+          </div>
+        <% })}; %>
       </div>
     </div>
   </div>
-  <div>
-    <form action="<%- rootPath %>">
-      <input class="boton-material" id="boton-material" type="submit" value="Volver" />
-    </form>
-  </div>
 </div>
+
