:ok_hand: Pattern show CSS

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -6,8 +6,7 @@
 @import './material_new';
 @import './pattern_index';
 @import './pattern_show';
-@import '/pattern_new';
-@import './pattern';
+@import './pattern_new';
 @import './user_profile';
 @import './user_list';
 @import './user_new';
