--- a/src/views/comments/_form.html.ejs
+++ b/src/views/comments/_form.html.ejs
@@ -28,9 +28,9 @@
     </div>
     <div id="hcontainer">
     <% if (comment.isNewRecord) { %>
-      <input id="boton" type="submit" name="create" value="Comentar" />
+      <input class="realized-button" type="submit" name="create" value="Comentar" />
     <% } else { %>
-      <input id="boton" type="submit" name="update" value="Actualizar" />
+      <input class="realized-button" type="submit" name="update" value="Actualizar" />
     <% } %>
     </div>
   </form>
