--- a/src/views/patterns/_formFavorite.html.ejs
+++ b/src/views/patterns/_formFavorite.html.ejs
@@ -15,9 +15,9 @@
     <div id="hcontainer">
       <input type="hidden" name="patternId" value="<%= pattern.id %>">
     <% if (!favorite) { %>
-      <input id="boton" type="submit" name="create" value="Agregar a Favoritos" />
+      <input class="realized-button" type="submit" name="create" value="Agregar a Favoritos" />
     <% } else { %>
-      <input id="boton" type="submit" name="delete" value="Remover de Favoritos" />
+      <input class="realized-button" type="submit" name="delete" value="Remover de Favoritos" />
     <% } %>
     </div>
   </form>
