:ok_hand: Comment update CSS ok

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,5 +1,6 @@
-@import 'category_show';
-@import 'category_new';
+@import './category_show';
+@import './category_new';
+@import './comment-edit';
 @import './layout';
 @import './home';
 @import './material_show';
