--- a/src/views/comments/edit.html.ejs
+++ b/src/views/comments/edit.html.ejs
@@ -1,8 +1,10 @@
-<br>
-<h1>Editar Comentario</h1>
-<%- include('_form') %>
-<div id="button">
-  <form action="<%- patternPath %>">
-      <input type="submit" value="Volver" />
-  </form>
+
+
+<div class="edit-material-content">
+  <div class="edit-tittle-content">
+    <h1 class="material-edit">Editar Comentario</h1>
+  </div>
+  <div class="edit-form-content">
+    <%- include('_form') %>
+  </div>
 </div>
