--- a/src/views/comments/_form.html.ejs
+++ b/src/views/comments/_form.html.ejs
@@ -12,26 +12,23 @@
     <% if (!comment.isNewRecord) { %>
       <input type="hidden" name="_method" value="PATCH" />
     <% } %>
-    <div id="panel">
-      <div>
-        <% if (comment.isNewRecord) { %>
-          <div>
-            <textarea rows="8" cols="47" type="text" required name="content"></textarea>
-            <input type="hidden" id="patternId" name="patternId" value="<%= pattern.id %>">
-          </div>
-        <% } else { %>
-          <div>
-            <textarea class="input-comment-box" rows="8" cols="80" type="text" required name="content"><%= comment.content %></textarea>
-          </div>
-        <% } %>
-      </div>
-    </div>
-    <div id="hcontainer">
-    <% if (comment.isNewRecord) { %>
-      <input class="realized-button" type="submit" name="create" value="Comentar" />
-    <% } else { %>
-      <input class="realized-button" type="submit" name="update" value="Actualizar" />
-    <% } %>
+    <div class="panel">
+      <% if (comment.isNewRecord) { %>
+        <textarea rows="8" cols="47" type="text" required name="content"></textarea>
+        <input type="hidden" id="patternId" name="patternId" value="<%= pattern.id %>">
+      <% } else { %>
+        <textarea class="input-comment-box" rows="8" cols="80" type="text" required name="content"><%= comment.content %></textarea>
+      <% } %>
+      <% if (comment.isNewRecord) { %>
+        <input class="create-button" type="submit" name="create" value="Comentar" />
+      <% } else { %>
+        <input class="update-button" type="submit" name="update" value="Actualizar" />
+      <% } %>
     </div>
   </form>
+  <% if (!comment.isNewRecord) { %>
+    <form action="<%- patternPath %>">
+        <input class="back-button" type="submit" value="Volver" />
+    </form>
+  <% } %>
 </div>
