--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -26,3 +26,39 @@ h3 {
   align-self: auto;
 }
 
+.pattern-content-home{
+  margin: 0px 30px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.search-subelement{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-bottom: 20px;
+}
+
+.search-container{
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.home-body{
+  margin: 0px 30px;
+}
+
+.select-search{
+  margin-left: 20px
+}
+
+.input-search{
+  max-width: 600px;
+}
+
+#label-select{
+  margin-right: 20px;
+}
