:ok_hand: :art: :lipstick: Checked CSS.

--- a/src/assets/styles/material_new.scss
+++ b/src/assets/styles/material_new.scss
@@ -1,5 +1,4 @@
 
-
 /* Built */
 
 .edit-material-content {
@@ -22,9 +21,7 @@
 }
 
 .material-new {
-  color: lightgreen;
+  color: rgb(81, 231, 81);
 }
 
-
 /* Interaction */
-
