--- a/src/views/users/index.html.ejs
+++ b/src/views/users/index.html.ejs
@@ -1,4 +1,3 @@
-
 <div class="user-list-content">
   <div>
     <h1>Usuarios</h1>
@@ -14,7 +13,7 @@
         <div class="user-data">
             <a class="user-font"> Nombre: <%= user.username %> </a>
             <a class="user-font"> E-mail: <%= user.email %> </a>
-            <a class="user-font"> Años: <%- user.age %> </a>
+            <a class="user-font"> Edad: <%- user.age %> </a>
             <a class="user-font"> Rol: <%- user.role %> </a>
         </div>
         <div>
