--- a/src/assets/styles/category_new.scss
+++ b/src/assets/styles/category_new.scss
@@ -1,5 +1,4 @@
 
-
 /* Built */
 
 .edit-category-content {
@@ -16,9 +15,7 @@
 }
 
 .category-new {
-  color: lightgreen;
+  color: rgb(81, 231, 81);
 }
 
-
 /* Interaction */
-
