--- a/src/assets/styles/category_show.scss
+++ b/src/assets/styles/category_show.scss
@@ -1,6 +1,4 @@
 
-
-
 /* Built */
 
 .category-show-content {
@@ -38,7 +36,6 @@
   background-color: #f7f7f7;
   padding: 20px;
   border-radius: 15px;
-
 }
 
 /* Details */
@@ -49,7 +46,7 @@
 }
 
 .add-category {
-  background-color: lightgreen;
+  background-color: rgb(81, 231, 81);
   border-style: none;
   width: 60px;
   height: 60px;
@@ -77,8 +74,8 @@
   margin-left: 20px;
   color: white;
 }
-/* Interaction */
 
+/* Interaction */
 
 @media screen and (max-width: 875px){
 
@@ -94,8 +91,4 @@
     width: 300px;
     word-wrap: break-word;
   }
-
 }
-
-
-
