--- a/src/assets/styles/material_show.scss
+++ b/src/assets/styles/material_show.scss
@@ -1,5 +1,4 @@
 
-
 /* Built */
 
 .material-show-content {
@@ -48,7 +47,7 @@
 }
 
 .add-material {
-  background-color: lightgreen;
+  background-color: rgb(81, 231, 81);
   border-style: none;
   width: 60px;
   height: 60px;
@@ -79,7 +78,6 @@
 
 /* Interaction */
 
-
 @media screen and (max-width: 875px){
 
   .material-container{
@@ -94,6 +92,4 @@
     width: 300px;
     word-wrap: break-word;
   }
-
 }
-
