--- a/src/assets/styles/user_new.scss
+++ b/src/assets/styles/user_new.scss
@@ -1,5 +1,4 @@
 
-
 /* Built */
 
 .edit-profile-content {
@@ -32,7 +31,7 @@
 
 .create-button{
   margin: 20px 0px;
-  background-color: lightgreen;
+  background-color: rgb(81, 231, 81);
   width: 120px;
   align-self: center;
   height: 40px;
@@ -49,7 +48,7 @@
 }
 
 .profile-new {
-  color: lightgreen;
+  color: rgb(81, 231, 81);
 }
 
 .edit-label {
@@ -77,9 +76,8 @@
   border-radius: 15px;
 }
 
-
 .new-button {
-  background-color: lightgreen;
+  background-color: rgb(81, 231, 81);
   width: 100%;
   height: 40px;
   align-self: center;
@@ -90,13 +88,7 @@
   border-radius: 15px;
 }
 
-
 /* Interaction */
-
-
-
-
-
 
 /*
 
