:lock: :email: Mailer working & resetToken added.

--- a/src/views/emails/forgot-password.html.ejs
+++ b/src/views/emails/forgot-password.html.ejs
@@ -1,5 +1,4 @@
 <h1> Knitter Reset Password </h1>
-
-<p>
-	http://<%=req.headers.host%>/reset/<%= token %>
-</p>
+<div>
+  <p> Entre al siguiente enlace para poder reestablecer su contraseña: http://<%= request.header.host %>/reset/<%= user.resetToken %></p>
+</div>
