--- a/src/views/users/_form.html.ejs
+++ b/src/views/users/_form.html.ejs
@@ -45,7 +45,7 @@
     </div>
   </form>
   <% if (user.isNewRecord) { %>
-    <form action="<%- rootPath %>">
+    <form action="<%- sessionPath %>">
       <input class="back-button" type="submit" value="Volver" />
     </form>
   <% } else { %>
