:wrench: Updated seeds.

--- a/src/views/patterns/_form.html.ejs
+++ b/src/views/patterns/_form.html.ejs
@@ -23,7 +23,7 @@
         <% } %>
         <label  class="edit-label" for="tension">Tensión:</label>
         <input type="text" name="tension" size="40" value="<%= pattern.tension %>" required/>
-        <label  class="edit-label" for="video">Link a Video (opcional):</label>
+        <label  class="edit-label" for="video">Link a Video de Youtube (opcional):</label>
         <input type="text" name="video" size="40" value="<%= pattern.video %>" />
         <label  class="edit-label" for="instructions">Instrucciones:</label>
         <textarea rows="8" cols="80" type="text" required name="instructions"><%= pattern.instructions %></textarea>
