:lock: :ok_hand: :email: Finished reset password.

--- a/src/views/emails/forgot-password.html.ejs
+++ b/src/views/emails/forgot-password.html.ejs
@@ -1,4 +1,6 @@
-<h1> Knitter Reset Password </h1>
 <div>
-  <p> Entre al siguiente enlace para poder reestablecer su contraseña: http://<%= request.header.host %>/reset/<%= user.resetToken %></p>
+  <p> Hola <%= user.username %>:</p>
+  <p> Hemos visto que necesita restablecer su contraseña. Haga click en el enlace siguiente y será redirigido a un sitio seguro desde el que podrá establecer una contraseña nueva:</p>
+  <p>http://<%= request.header.host %>/session/reset/<%= user.resetToken %></p>
+  <p>Si no ha intentado restablecer su contraseña, por favor ignore este email y su contraseña se mantendrá como está actualmente.</p>
 </div>
