:email: Added an email for reset password failure.

--- a/src/views/emails/reset-password.html.ejs
+++ b/src/views/emails/reset-password.html.ejs
@@ -1,4 +1,6 @@
 <div>
   <p> Hola <%= user.username %>:</p>
   <p> La contraseña de tu cuenta ha sido actualizada correctamente! </p>
+  <p> Atte.</p>
+  <p> El Equipo de Knitter</p>
 </div>
