:lipstick: Added placeholder for votes.

--- a/src/views/patterns/show.html.ejs
+++ b/src/views/patterns/show.html.ejs
@@ -44,10 +44,14 @@
       <p class="pattern-font" >Diseñado por: <a class="pattern-font-tittle" href="<%- authorPath %>"><%- author.username %></a></p>
       <p class="pattern-font">Tensión: <%- pattern.tension %></p>
       <p class="pattern-font">Puntaje: <%- pattern.score %>/5</p>
-      <p class="pattern-font">Popularidad: <%- pattern.popularity %></p>
       <% if (currentUser) { %>
         <div class="forms-pattern">
           <%- include('../vote_patterns/_form') %>
+        </div>
+      <% } %>
+      <p class="pattern-font">Popularidad: <%- pattern.popularity %></p>
+      <% if (currentUser) { %>
+        <div class="forms-pattern">
           <%- include('_formAdd') %>
           <%- include('_formFavorite') %>
         </div>
