--- a/src/views/patterns/show.html.ejs
+++ b/src/views/patterns/show.html.ejs
@@ -74,7 +74,7 @@
       <p class="pattern-font"><%- pattern.instructions %></p>
     </div>
   </div>
-  <div id="comment-box" data-pattern-id="<%= pattern.id %>"></div>
+  <div class="pattern-comment" id="comment-box" data-pattern-id="<%= pattern.id %>"></div>
   <div class="pattern-comment">
     <div class="comment-pattern">
         <% if (currentUser) { %>
